2019-07-16  Kirit Saelensminde  <kirit@felspar.com>
 Joining an empty fragment does not give the same result as joining a missing fragment.

2019-05-28  Kirit Saelensminde  <kirit@felspar.com>
 Add methods for fetching out string version and JSON version of mime bodies.

2018-08-31  Kirit Saelensminde  <kirit@felspar.com>
 Allow setting a URL fragment from a jcursor.

2018-08-22  Kirit Saelensminde  <kirit@felspar.com>
 Implement a better URL join that covers many more of the required cases.

2018-08-20  Kirit Saelensminde  <kirit@felspar.com>
 Remove usernames and passwords from URLs.

2018-08-19  Kirit Saelensminde  <kirit@felspar.com>
 Rename `url::anchor` to `url::fragment` as that is the proper term.

2018-07-18  Kirit Saelensminde  <kirit@felspar.com>
 Improve handling of weird ways TCP connections can be dropped and add more logging.

2018-07-02  Kirit Saelensminde  <kirit@felspar.com>
 The HTTP response body doesn't really need to be `const`.

2018-06-11  Kirit Saelensminde  <kirit@felspar.com>
 Add `fost-hod` for handling packet oriented data over TCP.

2018-04-05  Kirit Saelensminde  <kirit@felspar.com>
 No longer make use of Boost regex library.

2017-12-28  Kirit Saelensminde  <kirit@felspar.com>
 Make the `query_string` API a bit less pathalogical by caching the stringified version.

2017-12-13  Kirit Saelensminde  <kirit@felspar.com>
 JSON arrays used as header sub-values are now set as the JSON string.

2017-09-17  Kirit Saelensminde  <kirit@felspar.com>
 Removed all uses of `boost::function`

2017-07-14  Kirit Saelensminde  <kirit@felspar.com>
 Add single quote and dollar symbol to allowed URL path characters.

2017-07-13  Kirit Saelensminde  <kirit@felspar.com>
 The conversion of HTTP request file paths to strings now works for a wider range of inputs. The conversion to `boost::filesystem:;wpath` is problematic with Boost versions prior to 1.64 due to the way they use codecvt.

2017-06-13  Kirit Saelensminde  <kirit@felspar.com>